--- a/courses/index.html
+++ b/courses/index.html
@@ -31,7 +31,7 @@
   <meta name="description" content="Austin Koontz Personal Website">
 
   
-  <link rel="alternate" hreflang="en-us" href="https://akoontz11.github.io/courses/">
+  <link rel="alternate" hreflang="en-us" href="/courses/">
 
   
 
@@ -99,7 +99,7 @@
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="https://akoontz11.github.io/courses/">
+  <link rel="canonical" href="/courses/">
 
   
   
@@ -110,9 +110,9 @@
   <meta property="twitter:card" content="summary_large_image">
   
   <meta property="og:site_name" content="Austin Koontz">
-  <meta property="og:url" content="https://akoontz11.github.io/courses/">
+  <meta property="og:url" content="/courses/">
   <meta property="og:title" content="Courses | Austin Koontz">
-  <meta property="og:description" content="Austin Koontz Personal Website"><meta property="og:image" content="https://akoontz11.github.io/img/static/img/ProfilePicture.jpg">
+  <meta property="og:description" content="Austin Koontz Personal Website"><meta property="og:image" content="/img/static/img/ProfilePicture.jpg">
   <meta property="og:locale" content="en-us">
   
   
@@ -473,6 +473,10 @@
   
   <div class="container">
     <footer class="site-footer">
+  
+  <p class="powered-by">
+    <a href="/privacy/">Privacy Policy</a>
+  </p>
   
 
   <p class="powered-by">
