Updates to project descriptions

--- a/project/global-soiltemp-database/index.html
+++ b/project/global-soiltemp-database/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="In contribution to a global database of soil temperatures and associated information, I&#39;ve assisted with collecting and formatting temperature data from numerous fieldsites around Logan Utah.">
+  <meta name="description" content="In contribution to a global database of soil temperatures and associated information, I&#39;m working with the Pearse Lab to help with collecting and formatting temperature data from numerous fieldsites around Logan, Utah.">
 
   
   <link rel="alternate" hreflang="en-us" href="/project/global-soiltemp-database/">
@@ -109,7 +109,7 @@
   <meta property="og:site_name" content="Austin Koontz">
   <meta property="og:url" content="/project/global-soiltemp-database/">
   <meta property="og:title" content="SoilTemp Database | Austin Koontz">
-  <meta property="og:description" content="In contribution to a global database of soil temperatures and associated information, I&#39;ve assisted with collecting and formatting temperature data from numerous fieldsites around Logan Utah."><meta property="og:image" content="/img/static/img/ProfilePicture.jpg">
+  <meta property="og:description" content="In contribution to a global database of soil temperatures and associated information, I&#39;m working with the Pearse Lab to help with collecting and formatting temperature data from numerous fieldsites around Logan, Utah."><meta property="og:image" content="/img/static/img/ProfilePicture.jpg">
   <meta property="og:locale" content="en-us">
   
   
