--- a/project/informing-otu-boundaries-through-phylogenetics/index.html
+++ b/project/informing-otu-boundaries-through-phylogenetics/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Operational taxonomic units (OTUs) are used to group similar microbial taxa together based on DNA sequence similarity, but ambiguity over the value used to determine OTU boundaries persists. My research looks to inform OTU thresholds using phylogenetic branch length transformations, and guide species delimitation using evolutionary context.">
+  <meta name="description" content="Operational taxonomic units (OTUs) are used to group similar microbial taxa together based on DNA sequence similarity, but ambiguity over the value used to determine OTU boundaries persists. My research looks to inform OTU thresholds using a family of phylogenetic branch length transformations, Pagel&#39;s transformations, and to guide species delimitation by examining the evolutionary context of the relevant individuals.">
 
   
   <link rel="alternate" hreflang="en-us" href="/project/informing-otu-boundaries-through-phylogenetics/">
@@ -109,7 +109,7 @@
   <meta property="og:site_name" content="Austin Koontz">
   <meta property="og:url" content="/project/informing-otu-boundaries-through-phylogenetics/">
   <meta property="og:title" content="Informing microbial species delimitation through phylogenetics | Austin Koontz">
-  <meta property="og:description" content="Operational taxonomic units (OTUs) are used to group similar microbial taxa together based on DNA sequence similarity, but ambiguity over the value used to determine OTU boundaries persists. My research looks to inform OTU thresholds using phylogenetic branch length transformations, and guide species delimitation using evolutionary context."><meta property="og:image" content="/img/static/img/ProfilePicture.jpg">
+  <meta property="og:description" content="Operational taxonomic units (OTUs) are used to group similar microbial taxa together based on DNA sequence similarity, but ambiguity over the value used to determine OTU boundaries persists. My research looks to inform OTU thresholds using a family of phylogenetic branch length transformations, Pagel&#39;s transformations, and to guide species delimitation by examining the evolutionary context of the relevant individuals."><meta property="og:image" content="/img/static/img/ProfilePicture.jpg">
   <meta property="og:locale" content="en-us">
   
   
