--- a/project/primula-cusickiana-species-complex-analysis/index.html
+++ b/project/primula-cusickiana-species-complex-analysis/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="The four members of the Primula cusickiana species complex, a group of plants endemic to the Great Basin, were each historically classified as their own species, before largely identical morphologies subsumed them to being described as varieties of the same species. My work aims to genomically compare these complex members through GBS techniques, and clarify the degree of relatedness between them.">
+  <meta name="description" content="The four members of the *Primula cusickiana* species complex were each historically classified as their own species, before a 2001 review subsumed them to varieties of the same species (due to largely similar morphologies). Previous research has demonstrated a substantial degree of genetic difference between populations of *Primula cusickiana var. maguirei*, the complex member found in Logan Canyon. My work aims to genomically compare these complex members through GBS techniques, and place the population structure of *P. cusickiana var. maguirei* into a wdier context.">
 
   
   <link rel="alternate" hreflang="en-us" href="/project/primula-cusickiana-species-complex-analysis/">
@@ -109,7 +109,7 @@
   <meta property="og:site_name" content="Austin Koontz">
   <meta property="og:url" content="/project/primula-cusickiana-species-complex-analysis/">
   <meta property="og:title" content="Primula cusickiana species complex analysis | Austin Koontz">
-  <meta property="og:description" content="The four members of the Primula cusickiana species complex, a group of plants endemic to the Great Basin, were each historically classified as their own species, before largely identical morphologies subsumed them to being described as varieties of the same species. My work aims to genomically compare these complex members through GBS techniques, and clarify the degree of relatedness between them."><meta property="og:image" content="/img/static/img/ProfilePicture.jpg">
+  <meta property="og:description" content="The four members of the *Primula cusickiana* species complex were each historically classified as their own species, before a 2001 review subsumed them to varieties of the same species (due to largely similar morphologies). Previous research has demonstrated a substantial degree of genetic difference between populations of *Primula cusickiana var. maguirei*, the complex member found in Logan Canyon. My work aims to genomically compare these complex members through GBS techniques, and place the population structure of *P. cusickiana var. maguirei* into a wdier context."><meta property="og:image" content="/img/static/img/ProfilePicture.jpg">
   <meta property="og:locale" content="en-us">
   
   
