--- a/project/symbiota2/index.html
+++ b/project/symbiota2/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="Symbiota2 is an update to the structure of the Symbiota software platform, a widely used biodiversity data management tool. I&#39;m working on an R package that will allow users to access Symbiota2 function calls within an R environment.">
+  <meta name="description" content="Symbiota2 is an update to the structure of the Symbiota software platform, a widely used biodiversity data management tool. I&#39;m working on an R package that will allow users to access Symbiota2 function calls within the R environment.">
 
   
   <link rel="alternate" hreflang="en-us" href="/project/symbiota2/">
@@ -109,7 +109,7 @@
   <meta property="og:site_name" content="Austin Koontz">
   <meta property="og:url" content="/project/symbiota2/">
   <meta property="og:title" content="Symbiota2 R package wrapper | Austin Koontz">
-  <meta property="og:description" content="Symbiota2 is an update to the structure of the Symbiota software platform, a widely used biodiversity data management tool. I&#39;m working on an R package that will allow users to access Symbiota2 function calls within an R environment."><meta property="og:image" content="/img/static/img/ProfilePicture.jpg">
+  <meta property="og:description" content="Symbiota2 is an update to the structure of the Symbiota software platform, a widely used biodiversity data management tool. I&#39;m working on an R package that will allow users to access Symbiota2 function calls within the R environment."><meta property="og:image" content="/img/static/img/ProfilePicture.jpg">
   <meta property="og:locale" content="en-us">
   
   
