--- a/project/mad-make-a-database-r-package/index.html
+++ b/project/mad-make-a-database-r-package/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="The MAD package enables access to a wide variety of published trait data through a simple command interface. I&#39;ve helped in the development and testing of this R package.">
+  <meta name="description" content="The MAD package enables access to a wide variety of published trait data through a simple command interface. I&#39;m working with others here at Utah State University in the development and testing of this R package.">
 
   
   <link rel="alternate" hreflang="en-us" href="/project/mad-make-a-database-r-package/">
@@ -109,7 +109,7 @@
   <meta property="og:site_name" content="Austin Koontz">
   <meta property="og:url" content="/project/mad-make-a-database-r-package/">
   <meta property="og:title" content="MAD (Make A Database) R package | Austin Koontz">
-  <meta property="og:description" content="The MAD package enables access to a wide variety of published trait data through a simple command interface. I&#39;ve helped in the development and testing of this R package."><meta property="og:image" content="/img/static/img/ProfilePicture.jpg">
+  <meta property="og:description" content="The MAD package enables access to a wide variety of published trait data through a simple command interface. I&#39;m working with others here at Utah State University in the development and testing of this R package."><meta property="og:image" content="/img/static/img/ProfilePicture.jpg">
   <meta property="og:locale" content="en-us">
   
   
