Update to projects.md file within content/home folder

--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
     <a href="/project/primula-cusickiana-species-complex-analysis/"  itemprop="url">Primula cusickiana species complex analysis</a>
   </span>
 
-  <p class="project-summary">The four members of the <em>Primula cusickiana</em> species complex were each historically classified as their own species, before a 2001 review subsumed them to varieties of the same species (due to largely similar morphologies). Previous research has demonstrated a substantial degree of genetic difference between populations of <em>Primula cusickiana var. maguirei</em>, the complex member found in Logan Canyon. My work aims to genomically compare these complex members through GBS techniques, and place the population structure of <em>P. cusickiana var. maguirei</em> into a wdier context.</p>
+  <p class="project-summary">The four members of the <em>Primula cusickiana</em> species complex were each historically classified as their own species, before a 2001 review subsumed them to varieties of the same species (due to largely similar morphologies). Previous research has demonstrated a substantial degree of genetic difference between populations of <em>Primula cusickiana var. maguirei</em>, the complex member found in Logan Canyon. My work aims to genomically compare these complex members through GBS techniques, and place the population structure of <em>P. cusickiana var. maguirei</em> into a wider context.</p>
 </div>
 
         
