--- a/project/index.html
+++ b/project/index.html
@@ -352,7 +352,7 @@
     <h2><a href="/project/primula-cusickiana-species-complex-analysis/">Primula cusickiana species complex analysis</a></h2>
     <div class="article-style">
       
-      The four members of the *Primula cusickiana* species complex were each historically classified as their own species, before a 2001 review subsumed them to varieties of the same species (due to largely similar morphologies). Previous research has demonstrated a substantial degree of genetic difference between populations of *Primula cusickiana var. maguirei*, the complex member found in Logan Canyon. My work aims to genomically compare these complex members through GBS techniques, and place the population structure of *P. cusickiana var. maguirei* into a wdier context.
+      The four members of the *Primula cusickiana* species complex were each historically classified as their own species, before a 2001 review subsumed them to varieties of the same species (due to largely similar morphologies). Previous research has demonstrated a substantial degree of genetic difference between populations of *Primula cusickiana var. maguirei*, the complex member found in Logan Canyon. My work aims to genomically compare these complex members through GBS techniques, and place the population structure of *P. cusickiana var. maguirei* into a wider context.
       
     </div>
   </div>
