Sent blogdown::build_site command, removed external link line for 2 different projects

--- a/project/index.html
+++ b/project/index.html
@@ -31,7 +31,7 @@
   <meta name="description" content="Austin Koontz Personal Website">
 
   
-  <link rel="alternate" hreflang="en-us" href="/project/">
+  <link rel="alternate" hreflang="en-us" href="https://akoontz11.github.io/project/">
 
   
 
@@ -99,7 +99,7 @@
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/icon-192.png">
 
-  <link rel="canonical" href="/project/">
+  <link rel="canonical" href="https://akoontz11.github.io/project/">
 
   
   
@@ -110,9 +110,9 @@
   <meta property="twitter:card" content="summary_large_image">
   
   <meta property="og:site_name" content="Austin Koontz">
-  <meta property="og:url" content="/project/">
+  <meta property="og:url" content="https://akoontz11.github.io/project/">
   <meta property="og:title" content="Projects | Austin Koontz">
-  <meta property="og:description" content="Austin Koontz Personal Website"><meta property="og:image" content="/img/static/img/ProfilePicture.jpg">
+  <meta property="og:description" content="Austin Koontz Personal Website"><meta property="og:image" content="https://akoontz11.github.io/img/static/img/ProfilePicture.jpg">
   <meta property="og:locale" content="en-us">
   
   
@@ -488,10 +488,6 @@
   
   <div class="container">
     <footer class="site-footer">
-  
-  <p class="powered-by">
-    <a href="/privacy/">Privacy Policy</a>
-  </p>
   
 
   <p class="powered-by">
