--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         </h3>
         
         <h3 itemprop="worksFor" itemscope itemtype="http://schema.org/Organization">
-          <a href="https://sites.google.com/site/paulwolfresearch/" target="_blank" itemprop="url" rel="noopener">
+          <a href="https://paulwolflab.com/" target="_blank" itemprop="url" rel="noopener">
           <span itemprop="name">Wolf Lab</span>
           </a>
         </h3>
